<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">

    <!-- App Title -->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/racer"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/draggy"
        android:textColor="@color/orange"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Speed display -->
    <TextView
        android:id="@+id/speedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/digital"
        android:text="@string/speed_label"
        android:textColor="#FFFFFF"
        android:textSize="86sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTitle" />

    <!-- Unit display -->
    <TextView
        android:id="@+id/unitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mph"
        android:textSize="38sp"
        android:fontFamily="@font/digital"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/speedText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Toggle Button -->
    <Button
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#FF5722"
        android:text="@string/switch_to_kph"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unitText" />

    <!-- Start Run Button -->
    <Button
        android:id="@+id/startRunButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FF5722"
        android:text="@string/start_run"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleButton" />

    <!-- Top Speed during 1320ft run -->
    <TextView
        android:id="@+id/topSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_speed_1320_label"
        android:textSize="28sp"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/startRunButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Overall Top Speed -->
    <TextView
        android:id="@+id/overallTopSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/top_speed_label"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topSpeedText" />

    <!-- Odometer -->
    <TextView
        android:id="@+id/odometerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_label"
        android:textSize="28sp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/overallTopSpeedText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#FF5722"
        android:text="@string/reset_button"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/odometerText" />

</androidx.constraintlayout.widget.ConstraintLayout>